--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- PMD -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<targetJdk>11</targetJdk>
+					<aggregate>true</aggregate>
+					<format>xml</format>
+					<!-- CPD options -->
+					<minimumTokens>20</minimumTokens>
+					<!--<ignoreIdentifiers>true</ignoreIdentifiers> -->
+					<failOnViolation>true</failOnViolation>
+					<failurePriority>2</failurePriority>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
