--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.lko</groupId>
 	<artifactId>first</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>first</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -43,11 +43,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+			<!-- <scope>provided</scope> -->
 		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>first</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -59,7 +60,7 @@
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
-					<targetJdk>11</targetJdk>
+					<targetJdk>${java.version}</targetJdk>
 					<aggregate>true</aggregate>
 					<format>xml</format>
 					<!-- CPD options -->
